configs/k8s/models-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: models-manager
  name: models-manager
spec:
  selector:
    matchLabels:
      app: models-manager
  template:
    metadata:
      labels:
        app: models-manager
    spec:
      containers:
        - image: sr2020/models-manager:TAG
          name: models-manager
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 20
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: models-manager
spec:
  type: LoadBalancer
  selector:
    app: models-manager
  ports:
    - name: http
      port: 80
      targetPort: 3000
