configs/k8s/push.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: push
  name: push
spec:
  selector:
    matchLabels:
      app: push
  template:
    metadata:
      labels:
        app: push
    spec:
      containers:
      - image: sr2020/push:latest
        name: push
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 20
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: push
spec:
  type: LoadBalancer
  selector:
    app: push
  ports:
  - name: http
    port: 7005
    targetPort: 3000
